@@ -1,8 +1,8 @@
 ############################################################################
 # lib/string/Make.defs
 #
-#   Copyright (C) 2011 Gregory Nutt. All rights reserved.
-#   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+#   Copyright (C) 2011-2012 Gregory Nutt. All rights reserved.
+#   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -33,11 +33,11 @@
 #
 ############################################################################
 
-STRING_SRCS	= lib_checkbase.c lib_isbasedigit.c lib_memset.c lib_memcpy.c \
-		  lib_memcmp.c lib_memmove.c lib_skipspace.c lib_strcasecmp.c  \
-		  lib_strcat.c lib_strchr.c lib_strcpy.c lib_strcmp.c lib_strcspn.c \
-		  lib_strdup.c lib_strerror.c lib_strlen.c lib_strnlen.c \
+STRING_SRCS	= lib_checkbase.c lib_isbasedigit.c lib_memset.c lib_memchr.c \
+		  lib_memcpy.c lib_memcmp.c lib_memmove.c lib_skipspace.c \
+		  lib_strcasecmp.c lib_strcat.c lib_strchr.c lib_strcpy.c lib_strcmp.c \
+		  lib_strcspn.c lib_strdup.c lib_strerror.c lib_strlen.c lib_strnlen.c \
 		  lib_strncasecmp.c lib_strncat.c lib_strncmp.c lib_strncpy.c \
-		  lib_strndup.c lib_strcasestr.c lib_strpbrk.c lib_strrchr.c  lib_strspn.c \
-		  lib_strstr.c lib_strtok.c lib_strtokr.c lib_strtol.c lib_strtoll.c \
-		  lib_strtoul.c lib_strtoull.c lib_strtod.c
+		  lib_strndup.c lib_strcasestr.c lib_strpbrk.c lib_strrchr.c\
+		  lib_strspn.c lib_strstr.c lib_strtok.c lib_strtokr.c lib_strtol.c \
+		  lib_strtoll.c lib_strtoul.c lib_strtoull.c lib_strtod.c
